--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,17 +1,17 @@
 @media (min-width: 480px){ 
-	.main {
+	.spacing {
 		padding: 0 var(--medium-padding);
 	}
 }
 
 @media (min-width: 768px){ 
-	.main {
+	.spacing {
 		padding: 0 var(--big-padding);
 	}
 }
 
 @media (min-width: 960px){ 
-	.main {
+	.spacing {
 		padding: 0 var(--huge-padding);
 	}
 }
