--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,16 +1,50 @@
 @media (min-width: 480px){ 
+	/*[GLOBAL]==========*/
 	.spacing {
 		padding: 0 var(--medium-padding);
 	}
 }
 
 @media (min-width: 768px){ 
+	/*[GLOBAL]==========*/
 	.spacing {
 		padding: 0 var(--big-padding);
+	}
+
+	/*[HEADER]==========*/
+	.icon-btn--toggle-mobile {
+		display: none;
+	}
+
+	/* Prevents nav__menu bug */
+	.nav__menu {
+		display: none;
+	}
+
+	.nav__menu{
+		width: auto;
+		height: auto;
+		flex-direction: row;
+		display: flex;
+		gap: var(--big-gap);
+		position: static;
+		visibility: visible;
+		background-color: var(--bg-color);
+	}
+
+	.nav__list {
+		position: static;
+		flex-direction: row;
+		gap: var(--big-gap);
+	}
+
+	.nav__link {
+		font-size: var(--small-font-size);
 	}
 }
 
 @media (min-width: 960px){ 
+	/*[GLOBAL]==========*/
 	.spacing {
 		padding: 0 var(--huge-padding);
 	}
