--- a/src/css/root.css
+++ b/src/css/root.css
@@ -90,3 +90,8 @@ html {
   font-weight: 400;
   scroll-behavior: smooth;
 }
+
+::selection {
+  background-color: var(--primary-color);
+  color: var(--primary-text-color);
+}
