--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,17 +27,34 @@ body {
   width: 100%;
   min-height: 100vh;
   padding-bottom: 30px;
-	padding-top: 110px;
+	padding-top: 100px;
   border-bottom: 1px solid var(--secondary-text-color);
 }
 
 .sr-only {
-
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--secondary-text-color);
+  border-radius: 0.2rem;
+}
 
 /*[TEXT]========================================================================*/
 .section__title {
+  margin-bottom: 15px;
 	font-size: var(--large-font-size);
   color: var(--primary-text-color);
   font-family: var(--monospace-font);
@@ -45,6 +62,7 @@ body {
 }
 
 .section__title--huge {
+  margin: 0;
 	font-size: clamp(40px, 8vw, 70px);
 }
 
@@ -56,13 +74,35 @@ body {
 }
 
 .section__subtitle--huge {
+  margin: 0;
 	font-size: clamp(40px, 1rem + 8vw, 70px);
 }
 
 .section__text {
   font-size: var(--small-font-size);
   line-height: 25px;
-  color: var(--primary-text-color);
+  color: var(--secondary-text-color);
+}
+
+.section__link {
+  position: relative;
+  padding: 0 2px;
+  color: var(--primary-color);
+}
+
+.section__link::after {
+  content: '';
+  position: absolute;
+  inset: auto auto 0 0;
+  height: 1px;
+  width: 0%;
+  background-color: var(--primary-color);
+  transition: ease-in-out 200ms;
+}
+
+.section__link:hover::after {
+  width: 100%;
+  inset: auto auto 0 0;
 }
 
 .section__text--serif {
@@ -120,8 +160,9 @@ body {
 .box-btn {
 	background: none;
   outline: none;
-	padding: 12px 24px;
+	padding: 14px 26px;
   white-space: nowrap;
+  user-select: none;
 	font-family: var(--sans-serif-font);
 	color: var(--primary-text-color);
 	font-size: var(--small-font-size);
@@ -132,6 +173,7 @@ body {
 
 .box-btn:hover {
 	background-color: var(--primary-color);
+  transition: ease-in-out 200ms;
 }
 
 /*[HEADER]======================================================================*/
@@ -151,6 +193,7 @@ body {
 }
 
 .nav__logo {
+  user-select: none;
   font-size: var(--large-font-size);
   color: var(--primary-title-color);
   font-weight: var(--huge-font-weight);
@@ -192,10 +235,11 @@ body {
 
 .nav__link {
   padding: 10px 5px;
+  user-select: none;
   font-family: var(--sans-serif-font);
   font-size: var(--medium-font-size);
   color: var(--secondary-text-color);
-  border-bottom: 2px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 
 .nav__link:hover {
@@ -208,8 +252,16 @@ body {
 }
 
 .nav__config {
-	display: inline-flex;
-	gap: var(--big-gap);
+	display: flex;
+  flex-direction: column;
+	gap: var(--small-gap);
+}
+
+.nav__config::before {
+  content: 'Tema:';
+  display: block;
+  font-size: var(--small-font-size);
+  color: var(--secondary-text-color);
 }
 
 /*[HOME]========================================================================*/
@@ -228,3 +280,39 @@ body {
 .section--home .section__text {
   max-width: 540px;
 }
+
+/*[ABOUT]=======================================================================*/
+.section--about {
+
+}
+
+.about__content {
+  display: grid;
+  grid-template-columns: 1fr ;
+  gap: var(--big-gap);
+  place-items: center;
+}
+
+.section--about .section__text {
+  margin-bottom: 15px;
+}
+
+.about__image {
+  width: 160px;
+  border-radius: var(--main-border-radius);
+  border: 1px solid var(--primary-color);
+}
+
+.about__image:hover {
+  background-color: var(--primary-color);
+  transition: ease-in-out 200ms;
+}
+
+/*[PROJECTS]====================================================================*/
+.section--projects {
+
+}
+
+
+
+/*[CONTACT]=====================================================================*/
