--- a/src/css/root.css
+++ b/src/css/root.css
@@ -3,44 +3,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-	/*[COLORS]====================================================================*/
-	/*Main*/
-	--primary-color: #9368FC;
-	
-	/*Backgrounds*/
-	--bg-color: #121214;
-	--primary-container-color: #202024;
-	--secondary-container-color: #29292e;
+  /*[COLORS]====================================================================*/
+  /*Main*/
+  --primary-color: #9368fc;
+
+  /*Backgrounds*/
+  --bg-color: #121214;
+  --primary-container-color: #202024;
+  --secondary-container-color: #29292e;
   --tertiary-container-color: #000000;
 
-	/*Titles*/
-	--primary-title-color: #FFFFFF;
-	--secondary-title-color: #C1C1C4;
+  /*Titles*/
+  --primary-title-color: #ffffff;
+  --secondary-title-color: #c1c1c4;
 
-	/*Text*/
-	--primary-text-color: #E1E1E6;
-	--secondary-text-color: #A8A8B3;
-	--tertiary-text-color: #9E9EA8;
+  /*Text*/
+  --primary-text-color: #e1e1e6;
+  --secondary-text-color: #a8a8b3;
+  --tertiary-text-color: #9e9ea8;
 
-	/*Status*/
-	--good: #04d361;
-	--alert: #ffcd1e;
-	--error: #e83f5b;
+  /*Status*/
+  --good: #04d361;
+  --alert: #ffcd1e;
+  --error: #e83f5b;
 
-	/*[FONT]======================================================================*/
-	/*Family*/
-	--sans-serif-font: 'Fira Code', monospace;
-	--monospace-font: 'Poppins', sans-serif;
+  /*Shadow*/
+  --shadow: rgba(0, 0, 0, 0.3);
 
-	/*Weight*/
-	--tiny-font-weight: 100;
+  /*[FONT]======================================================================*/
+  /*Family*/
+  --sans-serif-font: 'Fira Code', monospace;
+  --monospace-font: 'Poppins', sans-serif;
+
+  /*Weight*/
+  --tiny-font-weight: 100;
   --small-font-weight: 200;
   --medium-font-weight: 300;
   --big-font-weight: 400;
   --large-font-weight: 500;
   --huge-font-weight: 600;
 
-	/*Size*/
+  /*Size*/
   --tiny-font-size: 1rem;
   --small-font-size: 1.6rem;
   --medium-font-size: 2rem;
@@ -49,38 +52,38 @@
   --extra-large-font-size: 4rem;
   --huge-font-size: 7.8rem;
 
-	/*[SIZES]=====================================================================*/
-	/*Border*/
-	--main-border-radius: 0.5rem; /* 0.8rem */
+  /*[SIZES]=====================================================================*/
+  /*Border*/
+  --main-border-radius: 5px; /* 0.8rem */
   --round-border-radius: 50%;
 
-	/*Margin*/
-  --tiny-margin: 0.5rem;
-  --small-margin: 1rem;
-  --medium-margin: 1.5rem;
-  --big-margin: 2rem;
-  --large-margin: 2.5rem;
-  --huge-margin: 3rem;
+  /*Margin*/
+  --tiny-margin: 5px;
+  --small-margin: 10px;
+  --medium-margin: 15px;
+  --big-margin: 20px;
+  --large-margin: 25px;
+  --huge-margin: 30px;
 
-	/*Padding*/
-  --tiny-padding: 1rem;
-  --small-padding: 1.5rem;
-  --medium-padding: 2.5rem;
-  --big-padding: 5rem;
-  --large-padding: 10rem;
-  --huge-padding: 15rem;
+  /*Padding*/
+  --tiny-padding: 10px;
+  --small-padding: 15px;
+  --medium-padding: 25px;
+  --big-padding: 50px;
+  --large-padding: 100px;
+  --huge-padding: 150px;
 
-	/*Gap*/
-  --tiny-gap: 0.5rem;
-  --small-gap: 1rem;
-  --medium-gap: 1.5rem;
-  --big-gap: 2rem;
-  --large-gap: 2.5rem;
-  --huge-gap: 4rem;
+  /*Gap*/
+  --tiny-gap: 5px;
+  --small-gap: 10px;
+  --medium-gap: 15px;
+  --big-gap: 20px;
+  --large-gap: 25px;
+  --huge-gap: 40px;
 }
 
 .light:root {
-	/*[COLORS]====================================================================*/
+  /*[COLORS]====================================================================*/
 }
 
 html {
@@ -89,9 +92,4 @@ html {
   font-family: var(--sans-serif-font);
   font-weight: 400;
   scroll-behavior: smooth;
-}
-
-::selection {
-  background-color: var(--primary-color);
-  color: var(--primary-text-color);
 }
